adding exceptions for transaction rollback trigger + adding duskswap.png for email

--- a/src/main/resources/templates/template_mail.html
+++ b/src/main/resources/templates/template_mail.html
@@ -77,11 +77,15 @@
       	width: 100.000000% !important;
       	max-width: 100.000000%;
       }
+	  #body_div{
+        width: 50%;
+        margin: auto;
+      }
       }
     </style>
   </head>
   <body>
-    <div>
+    <div id="body_div">
       <table align='center' border='0' cellpadding='0' cellspacing='0' role='presentation' style='background:#30373b;background-color:#30373b;width:100%;'>
         <tbody>
           <tr>
@@ -113,8 +117,8 @@
                             <tr>
                               <td align='right' style='font-size:0px;padding:10px 25px;word-break:break-word;'>
                                 <div style='color:#848789;font-family:Open Sans, Arial, sans-serif;font-size:12px;line-height:18px;text-align:right;text-decoration:none;'>
-                                  <a href='https://www.duskpay.com/' style='text-decoration:underline; color:#848789;' target='_blank'>
-                                    www.duskpay.com
+                                  <a href='https://www.duskswap.com/' style='text-decoration:underline; color:#848789;' target='_blank'>
+                                    www.duskwap.com
                                   </a>
                                 </div>
                               </td>
@@ -153,7 +157,7 @@
                             <tr>
                               <td style='width:230px;'>
                                 <a href='# Logo Url' target='_blank'>
-                                  <img alt='LoGo Here' height='80' src='https://duskpay.com/assets/img/duskpay.png' style='border:0;display:block;font-size:13px;height:80px;outline:none;text-decoration:none;width:100%;' width='230' />
+                                  <img alt='LoGo Here' height='80' src='/static/duskswap.png' style='border:0;display:block;font-size:13px;height:80px;outline:none;text-decoration:none;width:100%;' width='230' />
                                 </a>
                               </td>
                             </tr>
