updating deposit code

--- a/src/main/resources/templates/template_mail.html
+++ b/src/main/resources/templates/template_mail.html
@@ -157,7 +157,7 @@
                             <tr>
                               <td style='width:230px;'>
                                 <a href='# Logo Url' target='_blank'>
-                                  <img alt='LoGo Here' height='80' src='/static/duskswap.png' style='border:0;display:block;font-size:13px;height:80px;outline:none;text-decoration:none;width:100%;' width='230' />
+                                  <img alt='LoGo Here' height='80' src='../static/img/duskswap.png' th:src="@{/img/duskswap.png}" />
                                 </a>
                               </td>
                             </tr>
@@ -238,8 +238,8 @@
                           <br />
                           <br />
                           Besoin d'assistance, contactez
-                          <a href='support@duskpay.com'>
-                            support@duskpay.com
+                          <a href='support@duskswap.com'>
+                            support@duskswap.com
                           </a>
                         </div>
                       </td>
@@ -349,7 +349,7 @@
                                     <tr>
                                       <td align='center' style='font-size:0px;padding:5px;word-break:break-word;'>
                                         <div style='color:#848789;font-family:Open Sans, Arial, sans-serif;font-size:12px;line-height:18px;text-align:center;text-transform:uppercase;'>
-                                          ©2‌021 DUSKPAY. All Rights Reserved.
+                                          ©2‌021 DUSKSWAP. All Rights Reserved.
                                         </div>
                                       </td>
                                     </tr>
@@ -358,7 +358,7 @@
                                         <div style='color:#848789;font-family:Open Sans, Arial, sans-serif;font-size:12px;line-height:18px;text-align:center;text-transform:uppercase;'>
                                           If you do not wish to receive any further emails from us, please
                                           <span style='text-decoration:underline;'>
-                                            <a href='https://www.duskpay.com/' style='text-decoration:underline; color:#848789;' target='_blank'>
+                                            <a href='https://duskswap.com/' style='text-decoration:underline; color:#848789;' target='_blank'>
                                               unsubscribe
                                             </a>
                                           </span>
