fixing thymeleaf issue + adding created_date in auditable

--- a/src/main/resources/templates/template_mail.html
+++ b/src/main/resources/templates/template_mail.html
@@ -157,7 +157,7 @@
                             <tr>
                               <td style='width:230px;'>
                                 <a href='# Logo Url' target='_blank'>
-                                  <img alt='LoGo Here' height='80' src='../static/img/duskswap.png' th:src="@{/img/duskswap.png}" />
+                                  <img alt='LoGo Here' height='80' src='../static/img/duskswap.png'/>
                                 </a>
                               </td>
                             </tr>
