--- a/src/main/resources/templates/template_mail.html
+++ b/src/main/resources/templates/template_mail.html
@@ -157,7 +157,7 @@
                             <tr>
                               <td style='width:230px;'>
                                 <a href='# Logo Url' target='_blank'>
-                                  <img alt='LoGo Here' height='80' src='../static/img/duskswap.png'/>
+                                  <img alt='LoGo Here' height='80' src='https://cdn.assets.dyspatch.io/security=policy:eyJjYWxsIjpbInJlYWQiLCJjb252ZXJ0Il0sImV4cGlyeSI6MjE0NzQ4MzY0NywiaGFuZGxlIjoiZzJLdE9JbldTVXliODdOMzlxYzQifQ==,signature:7392bf345c3fd6fc8168e6a2d08fb65d97fb7201fe95c3570b5f98d0fd49945a/g2KtOInWSUyb87N39qc4'/>
                                 </a>
                               </td>
                             </tr>
